--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,8 +4,6 @@
 
 set -g default-terminal "screen-256color"
 set -g history-limit 20000
-set -g buffer-limit 20
-set -sg escape-time 0
 set -g display-time 1500
 set -g remain-on-exit off
 set -g repeat-time 300
@@ -14,8 +12,8 @@ setw -g automatic-rename off
 setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
-unbind C-b
-set -g prefix C-a
+#unbind C-b
+#set -g prefix C-a
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
@@ -25,6 +23,16 @@ set -g set-titles-string "#I:#W"
 set -g base-index 1
 setw -g pane-base-index 1
 
+##########
+# MOUSE #
+##########
+setw -g mouse on
+# Toggle mouse on with ^B m
+bind m setw -g mouse on
+    display 'Mouse: ON'
+# Toggle mouse off with ^B M
+bind M setw -g mouse off
+    display 'Mouse: OFF'
 # Enable mouse support
 set -g mouse on
 
@@ -88,7 +96,7 @@ bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
 
 # Zoom pane
-bind + resize-pane -Z
+bind z resize-pane -Z
 
 # Link window
 bind L command-prompt -p "Link window from (session:window): " "link-window -s %% -a"
@@ -338,6 +346,7 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Plugin properties
 set -g @sidebar-tree 't'
@@ -382,3 +391,76 @@ bind -T off F12 \
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
+
+
+bind-key M run-shell "tmux_toggle_option monitor-activity on off"
+
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+
+#################
+# Pane creation #
+#################
+bind-key v split-window -h
+bind-key s split-window -v
+
+###################
+# Pane management #
+###################
+#bind-key M-j command-prompt -p "Join pane from:"  "join-pane -s '%%'"
+#bind-key M-m command-prompt -p "Move pane to:"  "join-pane -t '%%'"
+#bind-key F run-shell "break-pane"
+
+###############
+# Select-pane #
+###############
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+## C-g C-k to passthrough a C-k
+## C-k is consumed for pane navigation but we want it for kill-to-eol
+#unbind C-k
+#bind C-k send-key C-k
+
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+bind-key -n C-down resize-pane -D 5
+bind-key -n C-up resize-pane -U 5
+bind-key -n C-left resize-pane -L 5
+bind-key -n C-right resize-pane -R 5
+
+#############
+# PANE SYNC #
+#############
+# sends input to all panes in a given window.
+bind-key S run-shell "tmux_toggle_option synchronize-panes on off"
+
+###########
+# WINDOWS #
+###########
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+########
+# MISC #
+########
+# No delay for escape key press
+set -sg escape-time 0
+
